@@ -11,4 +11,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 001 ==> PrintWizard  : 232382 : Setting custom page size is impossible.
 002 ==> Libkdcraw    : 221542 : Build fails due to ambiguities.
 003 ==> DngConverter : 191907 : DNG Converter damages white balance metadata.
-004 ==>
+004 ==> DngConverter : 233088 : Compile error on Win32 with MinGW4.
+005 ==>
